--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,9 +12,12 @@
     "langdesigner",
     "matplotlib",
     "prioritizer",
+    "pycache",
     "pyyaml",
+    "streamlit",
     "Techsolutions",
     "timestamping",
-    "tokenless"
+    "tokenless",
+    "venv"
   ]
 }
